--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 "scripts": {
   "test": "echo \"Error: no test specified\" && exit 1",
   "preview": "vite preview --port 10000",
-  "dev": "vite"
+  "dev": "vite",
+  "build": "vite build"
+
 },
   "keywords": [],
   "author": "",
