--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "leaflet": "^1.9.4",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "vite": "^7.1.12"
   }
 }
