--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-"scripts": {
-  "postinstall": "chmod +x node_modules/vite/bin/vite.js",
-  "build": "node_modules/vite/bin/vite.js build",
-  "preview": "node_modules/vite/bin/vite.js preview --port 10000",
-  "dev": "vite",
-  "test": "echo \"Error: no test specified\" && exit 1"
-},
+  "scripts": {
+    "postinstall": "chmod +x node_modules/vite/bin/vite.js",
+    "build": "node_modules/vite/bin/vite.js build",
+    "preview": "node_modules/vite/bin/vite.js preview --port 10000",
+    "dev": "vite",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "d3": "^7.9.0",
+    "d3-hexbin": "^0.2.2",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "leaflet": "^1.9.4",
