--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^5.1.0",
     "leaflet": "^1.9.4",
     "pg": "^8.16.3",
+    "simplex-noise": "^4.0.3",
     "vite": "^7.1.12"
   },
   "engines": {
